Fix: correct step syntax in Github actions

--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -17,5 +17,5 @@ jobs:
         run:  date
 
       - name: Print Goodbye
-      - run:  echo "Workflow completed successfully!"
+        run:  echo "Workflow completed successfully!"
 
